<resources>
    <string name="app_name">龄听</string>
    <string name="yellow_zero">黄龄</string>

    <string name="tt_setting">设置</string>
    <string name="tt_about">关于龄听</string>
    <string name="tt_close">关闭</string>
    <string name="tt_enable_music_mobile">允许使用流量播放吗？</string>

    <string name="tv_music">音乐</string>
    <string name="tv_video">视频</string>
    <string name="tv_image">图片</string>
    <string name="tv_schedule">日程</string>
    <string name="tv_source">来源</string>
    <string name="tv_add_tag">添加标签</string>
    <string name="tv_like">收藏</string>
    <string name="tv_download">下载</string>
    <string name="tv_downloaded">已下载</string>
    <string name="tv_share">分享</string>
    <string name="tv_tag">标签</string>
    <string name="tv_tag_all">全部标签</string>
    <string name="tv_tag_like">我的收藏</string>
    <string name="tv_music_count">%d首</string>
    <string name="tv_image_tag_count">%s(%d)</string>
    <string name="tv_music_fav">我喜欢的音乐</string>
    <string name="tv_music_local">本地音乐</string>
    <string name="tv_open">打开</string>
    <string name="tv_version_error">获取版本号错误</string>
    <string name="tv_version_has_new">有新版本</string>
    <string name="tv_version_is_new">已是最新版本</string>
    <string name="tv_bilibili_main">本人投稿</string>
    <string name="tv_update_cancel">下次一定</string>
    <string name="tv_update_download">现在下载</string>
    <string name="tv_play_music_without_wifi">是否允许流量播放</string>
    <string name="tv_current_version">当前版本</string>
    <string name="tv_clean_cache">清除缓存</string>
    <string name="tv_clean_cache_success">缓存清除成功</string>
    <string name="tv_clean_cache_error">缓存清除失败</string>
    <string name="tv_clean_cache_process">正在清除中…</string>
    <string name="tv_cache_image">图片缓存</string>
    <string name="tv_cache_music">音乐缓存</string>
    <string name="tv_app_update">软件更新-%s</string>
    <string name="tv_image_empty">你已经看完所有的图片了</string>
    <string name="tv_other">其他</string>

    <string name="ts_http_error">加载失败</string>
    <string name="ts_http_loading">加载中，请稍后再试</string>
    <string name="ts_download_error">下载失败</string>
    <string name="ts_download_apk_error">安装包下载失败</string>
    <string name="ts_download_image_process">图片下载中，请稍后</string>
    <string name="ts_download_success">图片已保存</string>
    <string name="ts_pause_music_offline">网络未连接，停止播放</string>
    <string name="ts_pause_music_mobile">正在使用流量，停止播放</string>
    <string name="ts_permission_storage">无权访问本地文件，请前往设置中开启权限</string>
    <string name="ts_add_tag">请在微博中评论 #你想增加的标签#</string>
    <string name="ts_clock">闹钟已设置</string>

    <string name="play">播放</string>
    <string name="notify_of_play">播放时的通知栏展示</string>
</resources>