<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".activity.ImagedDetailActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        app:layout_scrollFlags="scroll|enterAlways"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:background="@android:color/transparent"
        android:gravity="center_vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/ivAvatar"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_centerVertical="true"
                tools:ignore="ContentDescription" />
            <TextView
                android:id="@+id/tvName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/ivAvatar"
                android:layout_marginStart="@dimen/_10sdp"
                android:textColor="@color/white"
                android:textSize="@dimen/_11sdp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:paddingTop="@dimen/_2sdp"
                android:paddingBottom="@dimen/_2sdp"
                android:paddingStart="@dimen/_6sdp"
                android:paddingEnd="@dimen/_6sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:background="@drawable/btn"
                android:textSize="@dimen/_13sdp"
                android:textColor="@color/white"
                android:text="@string/tv_source"
                android:onClick="onClickSource"
                tools:ignore="RelativeOverlap" />
        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>
    <LinearLayout
        android:id="@+id/llBottomMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:baselineAligned="false">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:paddingBottom="@dimen/_8sdp"
            tools:ignore="UseCompoundDrawables">
            <ImageView
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:src="@drawable/ic_view"
                tools:ignore="ContentDescription" />
            <TextView
                android:id="@+id/tvViewCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4sdp"
                android:textColor="@color/white"
                android:textSize="@dimen/_10sdp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:paddingBottom="@dimen/_8sdp"
            tools:ignore="UseCompoundDrawables"
            android:onClick="onClickLike">
            <ImageView
                android:id="@+id/ivLike"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:src="@drawable/ic_star"
                tools:ignore="ContentDescription" />
            <TextView
                android:id="@+id/tvLikeCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4sdp"
                android:textColor="@color/white"
                android:textSize="@dimen/_10sdp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:paddingBottom="@dimen/_8sdp"
            tools:ignore="UseCompoundDrawables"
            android:onClick="onClickDownload">
            <ImageView
                android:id="@+id/ivDownload"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:src="@drawable/ic_download"
                tools:ignore="ContentDescription" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4sdp"
                android:textColor="@color/white"
                android:textSize="@dimen/_10sdp"
                android:text="@string/tv_download" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:paddingBottom="@dimen/_8sdp"
            tools:ignore="UseCompoundDrawables"
            android:onClick="onClickShare">
            <ImageView
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:src="@drawable/ic_share"
                tools:ignore="ContentDescription" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4sdp"
                android:textColor="@color/white"
                android:textSize="@dimen/_10sdp"
                android:text="@string/tv_share"/>
        </LinearLayout>
    </LinearLayout>
    <com.yellowzero.listen.view.PinchImageView
        android:id="@+id/ivImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/llBottomMenu"
        android:layout_below="@id/toolbar"
        android:background="@color/black"/>
    <ProgressBar
        android:id="@+id/pbLoad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        style="@style/Widget.AppCompat.ProgressBar"/>
    <ScrollView
        android:id="@+id/svDetail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/llBottomMenu"
        android:layout_below="@id/toolbar"
        android:padding="@dimen/_30sdp"
        android:scrollbars="none"
        android:visibility="gone">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <com.yellowzero.listen.view.TagCloudView
                android:id="@+id/viewTag"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:tcvBorder="@dimen/_2sdp"
                app:tcvItemBorderVertical="@dimen/_3sdp"
                app:tcvCanTagClick="true"
                app:tcvTextColor="@color/white"/>
            <TextView
                android:id="@+id/tvText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:layout_marginTop="@dimen/_14sdp"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sdp" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>